# math

./: .clang-tidy  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  NOTICES.md  README.md
.github/workflows/: cmake.yml
CMake/: CheckCPU.cmake  run_clang_tidy_on_interface.cmake
algebra/: CMakeLists.txt
algebra/benchmarks/: BenchmarkMultiplicationLarge.cpp  CMakeLists.txt
algebra/include/algebra/: Algebra.hpp  Internal.hpp  MappingFunctions.hpp  Matrix.hpp  MultiplicationLarge.hpp  Quaternion.hpp  Vector.hpp
algebra/tests/: CMakeLists.txt  Helper.hpp  TestMappingFunctions.cpp  TestMatrix2x2.cpp  TestMatrix3x3.cpp  TestMatrix4x4.cpp  TestMatrixMxN.cpp  TestMultiplicationLarge.cpp  TestQuaternion.cpp  TestVector2.cpp  TestVector3.cpp  TestVector4.cpp  main.cpp
combinatorics/: CMakeLists.txt
combinatorics/include/combinatorics/: Concepts.hpp  Permutations.hpp
combinatorics/tests/: CMakeLists.txt  main.cpp
large/: CMakeLists.txt
large/include/large/: Matrix.hpp  Multiplication.hpp
large/src/: Matrix.cpp  Multiplication.cpp
large/tests/: BenchmarkLargeMatrix.cpp  CMakeLists.txt  TestLargeMatrix.cpp
src/: LCNSConcepts.hpp  Permutations.hpp  main.cpp
